# vessel_segmentation

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  seg.ipynb  vessel_segmentation.cpp
cpp/: vessel_segmentation.cpp
output/: 01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif
